src/abc/parser/AbcParser.java
// Generated from Abc.g4 by ANTLR 4.5.1

package abc.parser;
// Do not edit this .java file! Edit the .g4 file and re-run Antlr.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AbcParser extends Parser {
  static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache =
    new PredictionContextCache();
  public static final int
    COLON=1, BAR=2, KEYC=3, KEYK=4, KEYL=5, KEYM=6, KEYQ=7, KEYT=8, KEYX=9, 
    SPACE=10, SLASH=11, STRING=12, NEWLINE=13, NUMBER=14, ANYCHAR=15, WORD=16, 
    NOTES=17;
  public static final int
    RULE_song = 0, RULE_header = 1, RULE_body = 2, RULE_headerRules = 3, 
    RULE_bodyRules = 4, RULE_sequence = 5, RULE_endRule = 6, RULE_content = 7, 
    RULE_endRuleContent = 8, RULE_field = 9, RULE_endField = 10, RULE_eol = 11;
  public static final String[] ruleNames = {
    "song", "header", "body", "headerRules", "bodyRules", "sequence", "endRule", 
    "content", "endRuleContent", "field", "endField", "eol"
  };

  private static final String[] _LITERAL_NAMES = {
    null, "':'", "'|'", "'C'", "'K'", "'L'", "'M'", "'Q'", "'T'", "'X'"
  };
  private static final String[] _SYMBOLIC_NAMES = {
    null, "COLON", "BAR", "KEYC", "KEYK", "KEYL", "KEYM", "KEYQ", "KEYT", 
    "KEYX", "SPACE", "SLASH", "STRING", "NEWLINE", "NUMBER", "ANYCHAR", 
    "WORD", "NOTES"
  };
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated
  public static final String[] tokenNames;
  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override

  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() { return "Abc.g4"; }

  @Override
  public String[] getRuleNames() { return ruleNames; }

  @Override
  public String getSerializedATN() { return _serializedATN; }

  @Override
  public ATN getATN() { return _ATN; }


      // This method makes the parser stop running if it encounters
      // invalid input and throw a RuntimeException.
      public void reportErrorsAsExceptions() {
          // To prevent any reports to standard error, add this line:
          //removeErrorListeners();
          
          addErrorListener(new BaseErrorListener() {
              public void syntaxError(Recognizer<?, ?> recognizer,
                                      Object offendingSymbol, 
                                      int line, int charPositionInLine,
                                      String msg, RecognitionException e) {
                  throw new ParseCancellationException(msg, e);
              }
          });
      }

  public AbcParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
  }
  public static class SongContext extends ParserRuleContext {
    public HeaderContext header() {
      return getRuleContext(HeaderContext.class,0);
    }
    public BodyContext body() {
      return getRuleContext(BodyContext.class,0);
    }
    public TerminalNode EOF() { return getToken(AbcParser.EOF, 0); }
    public SongContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_song; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterSong(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitSong(this);
    }
  }

  public final SongContext song() throws RecognitionException {
    SongContext _localctx = new SongContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_song);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(24);
      header();
      setState(25);
      body();
      setState(26);
      match(EOF);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class HeaderContext extends ParserRuleContext {
    public EndRuleContext endRule() {
      return getRuleContext(EndRuleContext.class,0);
    }
    public List<HeaderRulesContext> headerRules() {
      return getRuleContexts(HeaderRulesContext.class);
    }
    public HeaderRulesContext headerRules(int i) {
      return getRuleContext(HeaderRulesContext.class,i);
    }
    public HeaderContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_header; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterHeader(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitHeader(this);
    }
  }

  public final HeaderContext header() throws RecognitionException {
    HeaderContext _localctx = new HeaderContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_header);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(29); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(28);
        headerRules();
        }
        }
        setState(31); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYC) | (1L << KEYL) | (1L << KEYM) | (1L << KEYQ) | (1L << KEYT) | (1L << KEYX))) != 0) );
      setState(33);
      endRule();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BodyContext extends ParserRuleContext {
    public EolContext eol() {
      return getRuleContext(EolContext.class,0);
    }
    public List<BodyRulesContext> bodyRules() {
      return getRuleContexts(BodyRulesContext.class);
    }
    public BodyRulesContext bodyRules(int i) {
      return getRuleContext(BodyRulesContext.class,i);
    }
    public BodyContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_body; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterBody(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitBody(this);
    }
  }

  public final BodyContext body() throws RecognitionException {
    BodyContext _localctx = new BodyContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_body);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(36); 
      _errHandler.sync(this);
      _la = _input.LA(1);
      do {
        {
        {
        setState(35);
        bodyRules();
        }
        }
        setState(38); 
        _errHandler.sync(this);
        _la = _input.LA(1);
      } while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BAR) | (1L << SPACE) | (1L << NOTES))) != 0) );
      setState(40);
      eol();
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class HeaderRulesContext extends ParserRuleContext {
    public FieldContext field() {
      return getRuleContext(FieldContext.class,0);
    }
    public TerminalNode COLON() { return getToken(AbcParser.COLON, 0); }
    public ContentContext content() {
      return getRuleContext(ContentContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public HeaderRulesContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_headerRules; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterHeaderRules(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitHeaderRules(this);
    }
  }

  public final HeaderRulesContext headerRules() throws RecognitionException {
    HeaderRulesContext _localctx = new HeaderRulesContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_headerRules);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(42);
      field();
      setState(43);
      match(COLON);
      setState(44);
      content();
      setState(45);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class BodyRulesContext extends ParserRuleContext {
    public SequenceContext sequence() {
      return getRuleContext(SequenceContext.class,0);
    }
    public List<TerminalNode> BAR() { return getTokens(AbcParser.BAR); }
    public TerminalNode BAR(int i) {
      return getToken(AbcParser.BAR, i);
    }
    public BodyRulesContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_bodyRules; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterBodyRules(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitBodyRules(this);
    }
  }

  public final BodyRulesContext bodyRules() throws RecognitionException {
    BodyRulesContext _localctx = new BodyRulesContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_bodyRules);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(50);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==BAR) {
        {
        {
        setState(47);
        match(BAR);
        }
        }
        setState(52);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(53);
      sequence();
      setState(54);
      match(BAR);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class SequenceContext extends ParserRuleContext {
    public TerminalNode NOTES() { return getToken(AbcParser.NOTES, 0); }
    public List<TerminalNode> SPACE() { return getTokens(AbcParser.SPACE); }
    public TerminalNode SPACE(int i) {
      return getToken(AbcParser.SPACE, i);
    }
    public SequenceContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_sequence; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterSequence(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitSequence(this);
    }
  }

  public final SequenceContext sequence() throws RecognitionException {
    SequenceContext _localctx = new SequenceContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_sequence);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(59);
      _errHandler.sync(this);
      _la = _input.LA(1);
      while (_la==SPACE) {
        {
        {
        setState(56);
        match(SPACE);
        }
        }
        setState(61);
        _errHandler.sync(this);
        _la = _input.LA(1);
      }
      setState(62);
      match(NOTES);
      setState(63);
      match(SPACE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class EndRuleContext extends ParserRuleContext {
    public EndFieldContext endField() {
      return getRuleContext(EndFieldContext.class,0);
    }
    public TerminalNode COLON() { return getToken(AbcParser.COLON, 0); }
    public ContentContext content() {
      return getRuleContext(ContentContext.class,0);
    }
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public EndRuleContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_endRule; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterEndRule(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitEndRule(this);
    }
  }

  public final EndRuleContext endRule() throws RecognitionException {
    EndRuleContext _localctx = new EndRuleContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_endRule);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(65);
      endField();
      setState(66);
      match(COLON);
      setState(67);
      content();
      setState(68);
      match(NEWLINE);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ContentContext extends ParserRuleContext {
    public TerminalNode STRING() { return getToken(AbcParser.STRING, 0); }
    public TerminalNode KEYC() { return getToken(AbcParser.KEYC, 0); }
    public TerminalNode KEYL() { return getToken(AbcParser.KEYL, 0); }
    public TerminalNode KEYM() { return getToken(AbcParser.KEYM, 0); }
    public TerminalNode KEYQ() { return getToken(AbcParser.KEYQ, 0); }
    public TerminalNode KEYT() { return getToken(AbcParser.KEYT, 0); }
    public TerminalNode KEYX() { return getToken(AbcParser.KEYX, 0); }
    public TerminalNode WORD() { return getToken(AbcParser.WORD, 0); }
    public TerminalNode NUMBER() { return getToken(AbcParser.NUMBER, 0); }
    public ContentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_content; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterContent(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitContent(this);
    }
  }

  public final ContentContext content() throws RecognitionException {
    ContentContext _localctx = new ContentContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_content);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(70);
      _la = _input.LA(1);
      if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYC) | (1L << KEYL) | (1L << KEYM) | (1L << KEYQ) | (1L << KEYT) | (1L << KEYX) | (1L << STRING) | (1L << NUMBER) | (1L << WORD))) != 0)) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class EndRuleContentContext extends ParserRuleContext {
    public TerminalNode STRING() { return getToken(AbcParser.STRING, 0); }
    public TerminalNode KEYK() { return getToken(AbcParser.KEYK, 0); }
    public TerminalNode WORD() { return getToken(AbcParser.WORD, 0); }
    public EndRuleContentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_endRuleContent; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterEndRuleContent(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitEndRuleContent(this);
    }
  }

  public final EndRuleContentContext endRuleContent() throws RecognitionException {
    EndRuleContentContext _localctx = new EndRuleContentContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_endRuleContent);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(72);
      _la = _input.LA(1);
      if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYK) | (1L << STRING) | (1L << WORD))) != 0)) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class FieldContext extends ParserRuleContext {
    public TerminalNode KEYC() { return getToken(AbcParser.KEYC, 0); }
    public TerminalNode KEYL() { return getToken(AbcParser.KEYL, 0); }
    public TerminalNode KEYM() { return getToken(AbcParser.KEYM, 0); }
    public TerminalNode KEYQ() { return getToken(AbcParser.KEYQ, 0); }
    public TerminalNode KEYT() { return getToken(AbcParser.KEYT, 0); }
    public TerminalNode KEYX() { return getToken(AbcParser.KEYX, 0); }
    public FieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_field; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterField(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitField(this);
    }
  }

  public final FieldContext field() throws RecognitionException {
    FieldContext _localctx = new FieldContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_field);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(74);
      _la = _input.LA(1);
      if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KEYC) | (1L << KEYL) | (1L << KEYM) | (1L << KEYQ) | (1L << KEYT) | (1L << KEYX))) != 0)) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class EndFieldContext extends ParserRuleContext {
    public TerminalNode KEYK() { return getToken(AbcParser.KEYK, 0); }
    public EndFieldContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_endField; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterEndField(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitEndField(this);
    }
  }

  public final EndFieldContext endField() throws RecognitionException {
    EndFieldContext _localctx = new EndFieldContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_endField);
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(76);
      match(KEYK);
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static class EolContext extends ParserRuleContext {
    public TerminalNode NEWLINE() { return getToken(AbcParser.NEWLINE, 0); }
    public TerminalNode EOF() { return getToken(AbcParser.EOF, 0); }
    public EolContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }
    @Override public int getRuleIndex() { return RULE_eol; }
    @Override
    public void enterRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).enterEol(this);
    }
    @Override
    public void exitRule(ParseTreeListener listener) {
      if ( listener instanceof AbcListener ) ((AbcListener)listener).exitEol(this);
    }
  }

  public final EolContext eol() throws RecognitionException {
    EolContext _localctx = new EolContext(_ctx, getState());
    enterRule(_localctx, 22, RULE_eol);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
      setState(78);
      _la = _input.LA(1);
      if ( !(_la==EOF || _la==NEWLINE) ) {
      _errHandler.recoverInline(this);
      } else {
        consume();
      }
      }
    }
    catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    }
    finally {
      exitRule();
    }
    return _localctx;
  }

  public static final ATN _ATN =
    new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  static {
    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
    for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
      _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
    }
  }
}